# aerogramme

./: Cargo.nix  Cargo.toml  flake.nix
aero-bayou/: Cargo.toml
aero-collections/: Cargo.toml
aero-dav/: Cargo.toml
aero-dav/src/: error.rs  xml.rs
aero-ical/: Cargo.toml
aero-proto/: Cargo.toml
aero-proto/src/dav/: resource.rs
aero-sasl/: Cargo.toml
aero-user/: Cargo.toml
aero-user/src/: cryptoblob.rs
aerogramme/: Cargo.toml
aerogramme/tests/common/: constants.rs
