[workspace]
resolver = "2"
members = [
  "aero-user",
  "aero-bayou",
  "aero-sasl",
  "aero-dav",
  "aero-dav/fuzz",
  "aero-collections",
  "aero-proto",
  "aerogramme",
]

default-members = ["aerogramme"]

[workspace.dependencies]
# internal crates
aero-user = { version = "0.3.1", path = "aero-user" }
aero-bayou = { version = "0.3.1", path = "aero-bayou" }
aero-sasl = { version = "0.3.1", path = "aero-sasl" }
aero-dav = { version = "0.3.1", path = "aero-dav" }
aero-ical = { version = "0.3.1", path = "aero-ical" }
aero-collections = { version = "0.3.1", path = "aero-collections" }
aero-proto = { version = "0.3.1", path = "aero-proto" }
aerogramme = { version = "0.3.1", path = "aerogramme" }

# async runtime
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "sync", "signal", "fs"] }
tokio-util = { version = "0.7", features = [ "compat" ]  }
tokio-stream = { version = "0.1" }
futures = "0.3"

# debug
log = "0.4"
backtrace = "0.3"
console-subscriber = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"
thiserror = "1"

# language extensions
lazy_static = "1"
duplexify = "1"
im = "15"
anyhow = "1"
async-trait = "0.1"
itertools = "0.14"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

# process related
nix = { version = "0.30", features = ["signal"] }
clap = { version = "3", features = ["derive", "env"] }

# email protocols
eml-codec = "0.1.2"
smtp-message = { git = "http://github.com/Alexis211/kannader", branch = "feature/lmtp" }
smtp-server = { git = "http://github.com/Alexis211/kannader", branch = "feature/lmtp" }
imap-codec = { version = "2.0.0", features = ["bounded-static", "ext_condstore_qresync"] }
imap-flow = { git = "https://github.com/duesee/imap-next.git", rev = "dce759a8531f317e8d7311fb032b366db6698e38" }

# dav protocols
icalendar = "0.16"

# http & web
http = "1.3"
http-body-util = "0.1.3"
hyper = "1.7"
hyper-rustls = { version = "0.26", features = ["http2"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = [ "blocking" ]} # for testing purposes only

# serialization, compression & parsing
serde = "1.0"
rmp-serde = "1.3"
toml = "0.9"
base64 = "0.22"
hex = "0.4"
nom = "7"
quick-xml = { version = "0.38", features = ["async-tokio"] }
zstd = { version = "0.13", default-features = false }

# cryptography & security
sodiumoxide = "0.2"
argon2 = "0.5"
rand = "0.8"
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
rpassword = "7"

# login
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls", "tls-rustls-ring"] }

# storage
k2v-client = { git = "https://git.deuxfleurs.fr/Deuxfleurs/garage.git", branch = "main-v1" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-runtime = "1"
aws-smithy-runtime-api = "1"

[patch.crates-io]
imap-types = { git = "https://github.com/superboum/imap-codec", branch = "custom/aerogramme" }
imap-codec = { git = "https://github.com/superboum/imap-codec", branch = "custom/aerogramme" }
